--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
   {name = "Michael Ciociola", email = "michael@ciocio.la"}
 ]
 description = "A mod manager for RimWorld. Forked from rmm-spoons"
-version = "1.1"
+version = "1.1.2"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
@@ -21,7 +21,7 @@ classifiers = [
 ]
 
 [project.scripts]
-rmm = "rmm.main:main"
+rmm = "rmm.cli:run"
 
 [project.urls]
 Homepage = "https://github.com/pswsm/rmm"
